--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -238,13 +238,13 @@
                     </div>
                     <div class="col">
                         <nav>
-                            <div class="open pd-mainNav-inner-6">
+                            <div class="pd-mainNav-inner-6">
                                 <ul> 
                                     <li>
                                         <a href="#" name="anchor" class="pd-pageActive-6">About</a>
                                     </li>
                                     <li class="pd-dropdown">
-                                        <a href="#" name="anchor" class="pd-dropdown-toggle">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
                                         <ul class="pd-dropdown-menu">
                                             <li>
                                                 <a class="pd-dropdown-item" href="#">Service 1</a>
@@ -256,10 +256,10 @@
                                     </li>                                     
                                     <li>
                                         <a href="#" name="anchor">Portfolio</a>
-                                    </li>                                     
-                                    <li>
-                                        <a href="#" name="anchor">FAQs</a>
                                     </li>
+                                    <li>
+                                        <a href="#" name="anchor">Segments</a>
+                                    </li>                                     
                                     <li>
                                         <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
                                     </li>
