--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <section id="pd-topBar-7" class="pd-topBar-7">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex flex-row">
+                        <div class="align-items-center d-flex flex-row p-2">
+                            <img src="images/design-assets/icon-arrow-primary.svg" alt="icon arrow" width="16" height="16">
+                            <p class="ps-2">Bold strapline about your business</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <div class="align-items-center d-flex flex-row justify-content-end">
+                            <a href="#" name="anchor" class="btn btn-outline-info">Request Quote</a>
+                        </div>
+                        <div class="pb-2 pe-0 ps-4 pt-2">
+                            <a name="anchor" href="https://www.twitter.com" class="pd-topBar-7-social-icon"><img width="28" height="28" src="images/design-assets/icon-twitter-share.svg" alt="twitter icon"></a>
+                            <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-7-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
+                            <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-7-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="pd-mainNav-6" class="pd-mainNav-6">
             <div class="container">
                 <div class="row" style="position: relative;">
@@ -31,7 +53,7 @@
                                         <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
                                         <ul class="pd-dropdown-menu">
                                             <li>
-                                                <a class="pd-dropdown-item" href="#">Service 1</a>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
                                             </li>
                                             <li>
                                                 <a class="pd-dropdown-item" href="#">Service 2</a>
@@ -59,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section style="height: 800px; margin-top: -106px; position: relative;">
+        <section style="height: 800px; margin-top: -65px; position: relative;">
             <img style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;" src="images/uploads/hero-sample-2.jpg">
         </section>
         <section class="bg-light pb-5 pt-5"> 
