Added new refactored code for dropdowns

--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
                                     </li>
                                     <li class="pd-dropdown">
                                         <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
-                                        <ul class="pd-dropdown-menu">
+                                        <ul class="pd-dropdown-menu" id="dropDown1">
+                                            <li>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="pd-dropdown">
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <ul class="pd-dropdown-menu" id="dropDown2">
                                             <li>
                                                 <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
                                             </li>
