--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                                             <li>
                                                 <a class="pd-dropdown-item" href="#">Service 2</a>
                                             </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 3</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 3</a>
+                                            </li>
                                         </ul>
                                     </li>                                     
                                     <li>
