Added fixes for navigation and drop down menues

--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -264,6 +264,7 @@
                                         <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
                                     </li>
                                 </ul>
+                                <div id="navMask6" class="pd-mainNav-mask-6"></div>
                             </div>
                             <div class="pd-mainNav-hamburger-6">
                                 <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
