--- a/index.html
+++ b/index.html
@@ -76,9 +76,35 @@
                                                 <a class="pd-dropdown-item" href="#">Service 3</a>
                                             </li>
                                         </ul>
+                                    </li>
+                                    <li class="pd-dropdown">
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <ul class="pd-dropdown-menu" id="dropDown3">
+                                            <li>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 3</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 3</a>
+                                            </li>
+                                        </ul>
                                     </li>                                     
                                     <li>
                                         <a href="#" name="anchor">Portfolio</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor">Segments</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor">Segments</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor">Segments</a>
                                     </li>
                                     <li>
                                         <a href="#" name="anchor">Segments</a>
@@ -87,6 +113,7 @@
                                         <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
                                     </li>
                                 </ul>
+                                <div id="navMask6" class="pd-mainNav-mask-6"></div>
                             </div>
                             <div class="pd-mainNav-hamburger-6">
                                 <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
