Added fixes for js when returning new nav into factory main navs doc

--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -24,8 +24,8 @@
                             <div class="pd-mainNav-inner-1">
                                 <a href="#" name="anchor" class="pd-pageActive-1">About</a>
                                 <div class="dropdown">
-                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown1-1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropDown1-1">
                                         <li>
                                             <a class="dropdown-item" href="#">Service 1</a>
                                         </li>
@@ -66,8 +66,8 @@
                             <div class="pd-mainNav-inner-2">
                                 <a href="#" name="anchor" class="pd-pageActive-2">About</a>
                                 <div class="dropdown">
-                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown2-1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropDown2-1">
                                         <li>
                                             <a class="dropdown-item" href="#">Service 1</a>
                                         </li>
@@ -109,8 +109,8 @@
                                 <div>
                                     <a href="#" name="anchor" class="pd-pageActive-3">About</a>
                                     <div class="dropdown">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                        <a class="dropdown-toggle" href="#" role="button" id="dropDown3-1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropDown3-1">
                                             <li>
                                                 <a class="dropdown-item" href="#">Service 1</a>
                                             </li>
@@ -153,8 +153,8 @@
                                 <div class="pd-mainNav-inner-4">
                                     <a href="#" name="anchor" class="pd-pageActive-4">About</a>
                                     <div class="dropdown">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                        <a class="dropdown-toggle" href="#" role="button" id="dropDown4-1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropDown4-1">
                                             <li>
                                                 <a class="dropdown-item" href="#">Service 1</a>
                                             </li>
@@ -199,8 +199,8 @@
                             <div class="pd-mainNav-inner-5">
                                 <a href="#" name="anchor" class="pd-pageActive-5">About</a>
                                 <div class="dropdown">
-                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown5-1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropDown5-1">
                                         <li>
                                             <a class="dropdown-item" href="#">Service 1</a>
                                         </li>
@@ -245,12 +245,32 @@
                                     </li>
                                     <li class="pd-dropdown">
                                         <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
-                                        <ul class="pd-dropdown-menu">
+                                        <ul class="pd-dropdown-menu" id="dropDown6-1">
                                             <li>
-                                                <a class="pd-dropdown-item" href="#">Service 1</a>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
                                             </li>
                                             <li>
                                                 <a class="pd-dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="pd-dropdown">
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Industries<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <ul class="pd-dropdown-menu" id="dropDown6-2">
+                                            <li>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Industry 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 2</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 3</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 4</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Industry 5</a>
                                             </li>
                                         </ul>
                                     </li>                                     
@@ -264,6 +284,11 @@
                                         <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
                                     </li>
                                 </ul>
+                                <div class="pd-mainNav-social-6">
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-facebook.svg"></a>
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-linkedin.svg"></a>
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-twitter.svg"></a>
+                                </div>
                                 <div id="navMask6" class="pd-mainNav-mask-6"></div>
                             </div>
                             <div class="pd-mainNav-hamburger-6">
