--- a/index.html
+++ b/index.html
@@ -61,50 +61,27 @@
                                         </ul>
                                     </li>
                                     <li class="pd-dropdown">
-                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Industries<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
                                         <ul class="pd-dropdown-menu" id="dropDown2">
                                             <li>
-                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
+                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Industry 1</a>
                                             </li>
                                             <li>
-                                                <a class="pd-dropdown-item" href="#">Service 2</a>
+                                                <a class="pd-dropdown-item" href="#">Industry 2</a>
                                             </li>
                                             <li>
-                                                <a class="pd-dropdown-item" href="#">Service 3</a>
+                                                <a class="pd-dropdown-item" href="#">Industry 3</a>
                                             </li>
                                             <li>
-                                                <a class="pd-dropdown-item" href="#">Service 3</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="pd-dropdown">
-                                        <a href="#" name="anchor" class="pd-dropdown-toggle" aria-expanded="false">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
-                                        <ul class="pd-dropdown-menu" id="dropDown3">
-                                            <li>
-                                                <a class="pd-dropdown-item" href="https://www.roythezebra.com">Service 1</a>
+                                                <a class="pd-dropdown-item" href="#">Industry 4</a>
                                             </li>
                                             <li>
-                                                <a class="pd-dropdown-item" href="#">Service 2</a>
-                                            </li>
-                                            <li>
-                                                <a class="pd-dropdown-item" href="#">Service 3</a>
-                                            </li>
-                                            <li>
-                                                <a class="pd-dropdown-item" href="#">Service 3</a>
+                                                <a class="pd-dropdown-item" href="#">Industry 5</a>
                                             </li>
                                         </ul>
                                     </li>                                     
                                     <li>
                                         <a href="#" name="anchor">Portfolio</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" name="anchor">Segments</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" name="anchor">Segments</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" name="anchor">Segments</a>
                                     </li>
                                     <li>
                                         <a href="#" name="anchor">Segments</a>
