--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                                         <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
                                     </li>
                                 </ul>
+                                <div class="pd-mainNav-social-6">
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-facebook.svg"></a>
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-linkedin.svg"></a>
+                                    <a name="anchor"><img alt="icon email" width="50" height="50" src="images/design-assets/icon-twitter.svg"></a>
+                                </div>
                                 <div id="navMask6" class="pd-mainNav-mask-6"></div>
                             </div>
                             <div class="pd-mainNav-hamburger-6">
