Added more styling to hero 1

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -13,8 +13,27 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-</div>
+        <section class="pb-5 pt-5"></section>
+        <section class="d-flex flex-row justify-content-center pb-5 pd-hero-1 pt-5">
+            <div class="align-items-center container-xl d-flex flex-row">
+                <div class="row">
+                    <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
+                        <h1>Recruitment Agency Software</h1>
+                        <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
+                        <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
+                        <div>
+                            <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
+                            <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"></span>Watch how it works</a>
+                        </div>                         
+                    </div>
+                    <div class="col-md-8 pe-md-0 ps-md-5">
+                        <div class="pd-hero-image-1-outer">
+                            <img src="images/uploads/hero-scissors.png" class="pd-hero-image-1">
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
