--- a/index.html
+++ b/index.html
@@ -107,7 +107,30 @@
                 </div>
             </div>
         </section>
-        <section style="height: 800px; margin-top: -65px; position: relative;">
+        <section class="d-flex flex-row justify-content-center pb-5 pd-hero-1 pt-5" style="background: #3D46AB;">
+            <div class="align-items-center container-xl d-flex flex-row">
+                <div class="row">
+                    <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
+                        <h1>Recruitment Agency Software</h1>
+                        <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
+                        <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
+                        <div>
+                            <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
+                            <a href="#" name="anchor" class="btn btn-outline-light mb-2">Watch how it works</a>
+                        </div>                         
+                    </div>
+                    <div class="col-md-8 pe-md-0 ps-md-5">
+                        <div class="pd-hero-image-1-outer">
+                            <img src="images/uploads/hero-scissors.png" class="pd-hero-image-1">
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section style="height: 800px;
+
+/* margin-top: -65px */
+position: relative;">
             <img style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;" src="images/uploads/hero-sample-2.jpg">
         </section>
         <section class="bg-light pb-5 pt-5"> 
