Fixed bug with play button and added test images

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </section>
-        <section class="d-flex flex-row justify-content-center pb-5 pd-hero-1 pt-5" style="background: #3D46AB;">
+        <section class="d-flex flex-row justify-content-center pb-5 pd-hero-1 pt-5">
             <div class="align-items-center container-xl d-flex flex-row">
                 <div class="row">
                     <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
@@ -116,7 +116,7 @@
                         <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
                         <div>
                             <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
-                            <a href="#" name="anchor" class="btn btn-outline-light mb-2">Watch how it works</a>
+                            <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"></span>Watch how it works</a>
                         </div>                         
                     </div>
                     <div class="col-md-8 pe-md-0 ps-md-5">
